# cfun

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  p.py  pyproject.toml
.github/workflows/: test.ymlx
docs/: font.md  freq.md  imgclean.md  index.md  json.md  md5.md  pan123.md  phrase.md  read.md
docs/yolo/: convert.md  makechar.md  splitdata.md  xlabel.md  yolo.md  yzm.md
src/cfun/: __init__.py  font.py  freq.py  imgclean.py  json.py  md5.py  pan123.py  phrase.py  read.py
src/cfun/data/: frequency.parquet
src/cfun/sfz/: __init__.py  idcardocr.py
src/cfun/utils/: AES.py  __init__.py  downimg.py
src/cfun/yolo/: __init__.py  base.py  classify.py  convert.py  detclsonnx.py  detclspt.py  detect.py  makechar.py  splitdata.py  xlabel.py
src/cfun/yzm/: __init__.py  chaojiying.py  dddocrtool.py
tests/: test_chaojiying.py  test_convert.py  test_detclsonnx.py  test_detclspt.py  test_detect.py  test_font.py  test_freq.py  test_json.py  test_makechar.py  test_pan123.py  test_phrase.py  test_read.py  test_sfz.py  test_xlabel.py
